# SoToxa-Drug-Fluid-Test-Result-Management-System

./: .gitignore  README.md
sotoxa_backend/: pyproject.toml  requirements.txt  run.py
sotoxa_backend/app/: main.py
sotoxa_backend/app/core/: config.py
sotoxa_backend/app/db/: mongodb.py
sotoxa_backend/app/models/: drug_test.py  user.py
sotoxa_backend/app/routers/: auth.py  drug_tests.py
sotoxa_backend/app/scripts/: init_db.py
sotoxa_backend/app/services/: auth_service.py  export_service.py  ocr_queue.py  ocr_service.py  upload_service.py
